# shop/api/shop/v1/shop.pb.go
@@ -1036,7 +1036,7 @@ var file_api_shop_v1_shop_proto_rawDesc = []byte{
 	0x65, 0x70, 0x6c, 0x79, 0x12, 0x1c, 0x0a, 0x09, 0x63, 0x61, 0x70, 0x74, 0x63, 0x68, 0x61, 0x49,
 	0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x63, 0x61, 0x70, 0x74, 0x63, 0x68, 0x61,
 	0x49, 0x64, 0x12, 0x18, 0x0a, 0x07, 0x70, 0x69, 0x63, 0x50, 0x61, 0x74, 0x68, 0x18, 0x02, 0x20,
-	0x01, 0x28, 0x09, 0x52, 0x07, 0x70, 0x69, 0x63, 0x50, 0x61, 0x74, 0x68, 0x32, 0xa8, 0x06, 0x0a,
+	0x01, 0x28, 0x09, 0x52, 0x07, 0x70, 0x69, 0x63, 0x50, 0x61, 0x74, 0x68, 0x32, 0x99, 0x07, 0x0a,
 	0x04, 0x53, 0x68, 0x6f, 0x70, 0x12, 0x62, 0x0a, 0x08, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65,
 	0x72, 0x12, 0x19, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31,
 	0x2e, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x52, 0x65, 0x71, 0x1a, 0x1b, 0x2e, 0x73,
@@ -1066,30 +1066,37 @@ var file_api_shop_v1_shop_proto_rawDesc = []byte{
 	0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x52, 0x65, 0x71, 0x1a,
 	0x19, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x41,
 	0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x49, 0x6e, 0x66, 0x6f, 0x22, 0x1e, 0x82, 0xd3, 0xe4, 0x93,
-	0x02, 0x18, 0x22, 0x13, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x2f,
-	0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x3a, 0x01, 0x2a, 0x12, 0x6c, 0x0a, 0x0d, 0x55, 0x70,
-	0x64, 0x61, 0x74, 0x65, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x12, 0x1e, 0x2e, 0x73, 0x68,
-	0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x70, 0x64, 0x61, 0x74,
-	0x65, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x52, 0x65, 0x71, 0x1a, 0x1b, 0x2e, 0x73, 0x68,
-	0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b,
-	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x18,
-	0x1a, 0x13, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x2f, 0x61, 0x64,
-	0x64, 0x72, 0x65, 0x73, 0x73, 0x3a, 0x01, 0x2a, 0x12, 0x68, 0x0a, 0x0e, 0x44, 0x65, 0x66, 0x61,
-	0x75, 0x6c, 0x74, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x12, 0x18, 0x2e, 0x73, 0x68, 0x6f,
-	0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73,
-	0x73, 0x52, 0x65, 0x71, 0x1a, 0x1b, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70,
-	0x2e, 0x76, 0x31, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
-	0x65, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x1a, 0x14, 0x2f, 0x61, 0x70, 0x69, 0x2f,
-	0x64, 0x65, 0x66, 0x61, 0x75, 0x6c, 0x74, 0x2f, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x3a,
-	0x01, 0x2a, 0x12, 0x63, 0x0a, 0x0d, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x41, 0x64, 0x64, 0x72,
-	0x65, 0x73, 0x73, 0x12, 0x18, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e,
-	0x76, 0x31, 0x2e, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x52, 0x65, 0x71, 0x1a, 0x1b, 0x2e,
-	0x73, 0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x68, 0x65,
-	0x63, 0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93,
-	0x02, 0x15, 0x2a, 0x13, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x64, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x2f,
-	0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x42, 0x15, 0x5a, 0x13, 0x73, 0x68, 0x6f, 0x70, 0x2f,
-	0x61, 0x70, 0x69, 0x2f, 0x73, 0x68, 0x6f, 0x70, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x02, 0x18, 0x22, 0x13, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73,
+	0x2f, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x3a, 0x01, 0x2a, 0x12, 0x6f, 0x0a, 0x10, 0x41, 0x64,
+	0x64, 0x72, 0x65, 0x73, 0x73, 0x4c, 0x69, 0x73, 0x74, 0x42, 0x79, 0x55, 0x69, 0x64, 0x12, 0x1c,
+	0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69,
+	0x73, 0x74, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x52, 0x65, 0x71, 0x1a, 0x1e, 0x2e, 0x73,
+	0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74,
+	0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1d, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x17, 0x12, 0x15, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x64, 0x64, 0x72, 0x65,
+	0x73, 0x73, 0x2f, 0x6c, 0x69, 0x73, 0x74, 0x2f, 0x75, 0x69, 0x64, 0x12, 0x6c, 0x0a, 0x0d, 0x55,
+	0x70, 0x64, 0x61, 0x74, 0x65, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x12, 0x1e, 0x2e, 0x73,
+	0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x70, 0x64, 0x61,
+	0x74, 0x65, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x52, 0x65, 0x71, 0x1a, 0x1b, 0x2e, 0x73,
+	0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x68, 0x65, 0x63,
+	0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1e, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x18, 0x1a, 0x13, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x2f,
+	0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x3a, 0x01, 0x2a, 0x12, 0x68, 0x0a, 0x0e, 0x44, 0x65, 0x66,
+	0x61, 0x75, 0x6c, 0x74, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x12, 0x18, 0x2e, 0x73, 0x68,
+	0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x64, 0x64, 0x72, 0x65,
+	0x73, 0x73, 0x52, 0x65, 0x71, 0x1a, 0x1b, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f,
+	0x70, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x1a, 0x14, 0x2f, 0x61, 0x70, 0x69,
+	0x2f, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x2f, 0x64, 0x65, 0x66, 0x61, 0x75, 0x6c, 0x74,
+	0x3a, 0x01, 0x2a, 0x12, 0x63, 0x0a, 0x0d, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x41, 0x64, 0x64,
+	0x72, 0x65, 0x73, 0x73, 0x12, 0x18, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70,
+	0x2e, 0x76, 0x31, 0x2e, 0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x52, 0x65, 0x71, 0x1a, 0x1b,
+	0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x73, 0x68, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x68,
+	0x65, 0x63, 0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1b, 0x82, 0xd3, 0xe4,
+	0x93, 0x02, 0x15, 0x2a, 0x13, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73,
+	0x73, 0x2f, 0x64, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x42, 0x15, 0x5a, 0x13, 0x73, 0x68, 0x6f, 0x70,
+	0x2f, 0x61, 0x70, 0x69, 0x2f, 0x73, 0x68, 0x6f, 0x70, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -1127,19 +1134,21 @@ var file_api_shop_v1_shop_proto_depIdxs = []int32{
 	12, // 3: shop.shop.v1.Shop.Captcha:input_type -> google.protobuf.Empty
 	12, // 4: shop.shop.v1.Shop.Detail:input_type -> google.protobuf.Empty
 	0,  // 5: shop.shop.v1.Shop.CreateAddress:input_type -> shop.shop.v1.CreateAddressReq
-	1,  // 6: shop.shop.v1.Shop.UpdateAddress:input_type -> shop.shop.v1.UpdateAddressReq
-	5,  // 7: shop.shop.v1.Shop.DefaultAddress:input_type -> shop.shop.v1.AddressReq
-	5,  // 8: shop.shop.v1.Shop.DeleteAddress:input_type -> shop.shop.v1.AddressReq
-	7,  // 9: shop.shop.v1.Shop.Register:output_type -> shop.shop.v1.RegisterReply
-	7,  // 10: shop.shop.v1.Shop.Login:output_type -> shop.shop.v1.RegisterReply
-	11, // 11: shop.shop.v1.Shop.Captcha:output_type -> shop.shop.v1.CaptchaReply
-	10, // 12: shop.shop.v1.Shop.Detail:output_type -> shop.shop.v1.UserDetailResponse
-	2,  // 13: shop.shop.v1.Shop.CreateAddress:output_type -> shop.shop.v1.AddressInfo
-	6,  // 14: shop.shop.v1.Shop.UpdateAddress:output_type -> shop.shop.v1.CheckResponse
-	6,  // 15: shop.shop.v1.Shop.DefaultAddress:output_type -> shop.shop.v1.CheckResponse
-	6,  // 16: shop.shop.v1.Shop.DeleteAddress:output_type -> shop.shop.v1.CheckResponse
-	9,  // [9:17] is the sub-list for method output_type
-	1,  // [1:9] is the sub-list for method input_type
+	3,  // 6: shop.shop.v1.Shop.AddressListByUid:input_type -> shop.shop.v1.ListAddressReq
+	1,  // 7: shop.shop.v1.Shop.UpdateAddress:input_type -> shop.shop.v1.UpdateAddressReq
+	5,  // 8: shop.shop.v1.Shop.DefaultAddress:input_type -> shop.shop.v1.AddressReq
+	5,  // 9: shop.shop.v1.Shop.DeleteAddress:input_type -> shop.shop.v1.AddressReq
+	7,  // 10: shop.shop.v1.Shop.Register:output_type -> shop.shop.v1.RegisterReply
+	7,  // 11: shop.shop.v1.Shop.Login:output_type -> shop.shop.v1.RegisterReply
+	11, // 12: shop.shop.v1.Shop.Captcha:output_type -> shop.shop.v1.CaptchaReply
+	10, // 13: shop.shop.v1.Shop.Detail:output_type -> shop.shop.v1.UserDetailResponse
+	2,  // 14: shop.shop.v1.Shop.CreateAddress:output_type -> shop.shop.v1.AddressInfo
+	4,  // 15: shop.shop.v1.Shop.AddressListByUid:output_type -> shop.shop.v1.ListAddressReply
+	6,  // 16: shop.shop.v1.Shop.UpdateAddress:output_type -> shop.shop.v1.CheckResponse
+	6,  // 17: shop.shop.v1.Shop.DefaultAddress:output_type -> shop.shop.v1.CheckResponse
+	6,  // 18: shop.shop.v1.Shop.DeleteAddress:output_type -> shop.shop.v1.CheckResponse
+	10, // [10:19] is the sub-list for method output_type
+	1,  // [1:10] is the sub-list for method input_type
 	1,  // [1:1] is the sub-list for extension type_name
 	1,  // [1:1] is the sub-list for extension extendee
 	0,  // [0:1] is the sub-list for field type_name
