# shop/api/shop/v1/shop_grpc.pb.go
@@ -28,6 +28,7 @@ type ShopClient interface {
 	Captcha(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*CaptchaReply, error)
 	Detail(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*UserDetailResponse, error)
 	CreateAddress(ctx context.Context, in *CreateAddressReq, opts ...grpc.CallOption) (*AddressInfo, error)
+	AddressListByUid(ctx context.Context, in *ListAddressReq, opts ...grpc.CallOption) (*ListAddressReply, error)
 	UpdateAddress(ctx context.Context, in *UpdateAddressReq, opts ...grpc.CallOption) (*CheckResponse, error)
 	DefaultAddress(ctx context.Context, in *AddressReq, opts ...grpc.CallOption) (*CheckResponse, error)
 	DeleteAddress(ctx context.Context, in *AddressReq, opts ...grpc.CallOption) (*CheckResponse, error)
@@ -86,6 +87,15 @@ func (c *shopClient) CreateAddress(ctx context.Context, in *CreateAddressReq, op
 	return out, nil
 }
 
+func (c *shopClient) AddressListByUid(ctx context.Context, in *ListAddressReq, opts ...grpc.CallOption) (*ListAddressReply, error) {
+	out := new(ListAddressReply)
+	err := c.cc.Invoke(ctx, "/shop.shop.v1.Shop/AddressListByUid", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *shopClient) UpdateAddress(ctx context.Context, in *UpdateAddressReq, opts ...grpc.CallOption) (*CheckResponse, error) {
 	out := new(CheckResponse)
 	err := c.cc.Invoke(ctx, "/shop.shop.v1.Shop/UpdateAddress", in, out, opts...)
@@ -122,6 +132,7 @@ type ShopServer interface {
 	Captcha(context.Context, *emptypb.Empty) (*CaptchaReply, error)
 	Detail(context.Context, *emptypb.Empty) (*UserDetailResponse, error)
 	CreateAddress(context.Context, *CreateAddressReq) (*AddressInfo, error)
+	AddressListByUid(context.Context, *ListAddressReq) (*ListAddressReply, error)
 	UpdateAddress(context.Context, *UpdateAddressReq) (*CheckResponse, error)
 	DefaultAddress(context.Context, *AddressReq) (*CheckResponse, error)
 	DeleteAddress(context.Context, *AddressReq) (*CheckResponse, error)
@@ -146,6 +157,9 @@ func (UnimplementedShopServer) Detail(context.Context, *emptypb.Empty) (*UserDet
 }
 func (UnimplementedShopServer) CreateAddress(context.Context, *CreateAddressReq) (*AddressInfo, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateAddress not implemented")
+}
+func (UnimplementedShopServer) AddressListByUid(context.Context, *ListAddressReq) (*ListAddressReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AddressListByUid not implemented")
 }
 func (UnimplementedShopServer) UpdateAddress(context.Context, *UpdateAddressReq) (*CheckResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method UpdateAddress not implemented")
@@ -259,6 +273,24 @@ func _Shop_CreateAddress_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Shop_AddressListByUid_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListAddressReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ShopServer).AddressListByUid(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/shop.shop.v1.Shop/AddressListByUid",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ShopServer).AddressListByUid(ctx, req.(*ListAddressReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _Shop_UpdateAddress_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(UpdateAddressReq)
 	if err := dec(in); err != nil {
@@ -339,6 +371,10 @@ var Shop_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "CreateAddress",
 			Handler:    _Shop_CreateAddress_Handler,
+		},
+		{
+			MethodName: "AddressListByUid",
+			Handler:    _Shop_AddressListByUid_Handler,
 		},
 		{
 			MethodName: "UpdateAddress",
